--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
 fastapi
+sqlalchemy
+pydantic
+uvicorn
+alembic
+python-dotenv
+fastapi-sqlalchemy
+psycopg2-binary
+gunicorn
+starlette
+aioschedule
+pytest
+python-jose
+python-multipart
+passlib
+bcrypt
