ping service initial

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-fastapi
-sqlalchemy
-pydantic
-uvicorn
-alembic
+fastapi~=0.89.1
+sqlalchemy~=2.0.0
+pydantic~=1.10.4
+uvicorn~=0.20.0
+alembic~=1.9.2
 python-dotenv
 fastapi-sqlalchemy
 psycopg2-binary
 gunicorn
-starlette
-aioschedule
-pytest
+starlette~=0.22.0
+pytest~=7.2.1
 python-jose
 python-multipart
-passlib
+passlib~=1.7.4
 bcrypt
+APScheduler~=3.10.0
+jose~=1.0.0
