--- a/alembic.ini
+++ b/alembic.ini
@@ -2,13 +2,10 @@
 
 [alembic]
 # path to migration scripts
-script_location = migrator
+script_location = migrations
 
-# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
-# Uncomment the line below if you want the files to be prepended with date and time
-# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
-# for all available tokens
-# file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+# template used to generate migration files
+# file_template = %%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
@@ -36,10 +33,10 @@ prepend_sys_path = .
 # sourceless = false
 
 # version location specification; This defaults
-# to migrator/versions.  When using multiple version
+# to migrations/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator" below.
-# version_locations = %(here)s/bar:%(here)s/bat:migrator/versions
+# version_locations = %(here)s/bar:%(here)s/bat:migrations/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
