--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,18 @@
-fastapi~=0.89.1
-sqlalchemy~=2.0.0
-pydantic~=1.10.4
-uvicorn~=0.20.0
-alembic~=1.9.2
+fastapi
+sqlalchemy
+pydantic
+uvicorn
+alembic
 python-dotenv
 fastapi-sqlalchemy
 psycopg2-binary
 gunicorn
-starlette~=0.22.0
-pytest~=7.2.1
+starlette
+pytest
 python-jose
 python-multipart
-passlib~=1.7.4
-bcrypt
-APScheduler~=3.10.0
-jose~=1.0.0
-auth-lib-profcomff~=2023.3.16.2
-asyncio~=3.4.3
-
-httpx~=0.23.3
-aiogram~=2.25.1
+APScheduler
+jose
+auth-lib-profcomff
+asyncio
+httpx
