--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-fastapi
-sqlalchemy
-pydantic
+fastapi~=0.100.0
+sqlalchemy~=2.0.18
+pydantic~=2.0.2
 pydantic-settings
-uvicorn
-alembic
+uvicorn~=0.22.0
+alembic~=1.11.1
 python-dotenv
 fastapi-sqlalchemy
 psycopg2-binary
 gunicorn
-starlette
-pytest
+starlette~=0.27.0
+pytest~=7.4.0
 python-jose
 python-multipart
-APScheduler
+APScheduler~=3.10.1
 jose
 auth-lib-profcomff
-asyncio
-requests
+asyncio~=3.4.3
+requests~=2.31.0
+ping3
