начало моей работы над этой помойкой

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,16 @@
-fastapi~=0.100.0
-sqlalchemy~=2.0.18
-pydantic~=2.0.2
+fastapi
+sqlalchemy
+pydantic
 pydantic-settings
-uvicorn~=0.22.0
-alembic~=1.11.1
+uvicorn
+alembic
 python-dotenv
 fastapi-sqlalchemy
 psycopg2-binary
 gunicorn
-starlette~=0.27.0
-pytest~=7.4.0
-python-jose
+pytest
 python-multipart
-APScheduler~=3.10.1
-jose
-auth-lib-profcomff
-asyncio~=3.4.3
-requests~=2.31.0
+APScheduler
 ping3
+auth-lib-profcomff
+requests
