Доработка до релиза (#5)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 fastapi
 sqlalchemy
 pydantic
+pydantic-settings
 uvicorn
 alembic
 python-dotenv
 fastapi-sqlalchemy
 psycopg2-binary
 gunicorn
-starlette
-aioschedule
 pytest
-python-jose
 python-multipart
-passlib
-bcrypt
+APScheduler
+ping3
+auth-lib-profcomff
+requests
