--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,6 @@ name: Python package
 on:
   pull_request:
 
-
 jobs:
   test:
     name: Unit tests
@@ -19,7 +18,7 @@ jobs:
           docker run -d -p 5432:5432 -e POSTGRES_HOST_AUTH_METHOD=trust --name db-test postgres:15-alpine
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           python -m ensurepip
@@ -29,8 +28,15 @@ jobs:
         run: |
           DB_DSN=postgresql://postgres@localhost:5432/postgres alembic upgrade head
       - name: Build coverage file
+        id: pytest
         run: |
-          DB_DSN=postgresql://postgres@localhost:5432/postgres pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered tests/ | tee pytest-coverage.txt
+          DB_DSN=postgresql://postgres@localhost:5432/postgres \
+            pytest \
+              --junitxml=pytest.xml \
+              --cov-report=term-missing:skip-covered \
+              tests/ \
+            | tee pytest-coverage.txt
+          exit ${PIPESTATUS[0]}
       - name: Print report
         if: always()
         run: |
@@ -49,6 +55,9 @@ jobs:
           remove-link-from-badge: false
           junitxml-path: ./pytest.xml
           junitxml-title: Summary
+      - name: Fail
+        if: always() && steps.pytest.outcome == 'failure'
+        run: exit 1
   linting:
     runs-on: ubuntu-latest
     steps:
@@ -61,8 +70,12 @@ jobs:
           requirementsFiles: "requirements.txt requirements.dev.txt"
       - uses: psf/black@stable
       - name: Comment if linting failed
-        if: ${{ failure() }}
+        if: failure()
+        id: comment
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
             :poop: Code linting failed, use `black` and `isort` to fix it.
+      - name: Fail
+        if: steps.comment.conclusion != 'failure' && steps.comment.conclusion != 'skipped'
+        run: exit 1
